# infernix

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  INFERNIX_IMPROVEMENTS_FROM_MATTANDJAMES.md  README.md  README_ORIGINAL.md  REPO_DRY_CLEANUP.md  RESEARCH_QUESTION.md  Setup.hs  cabal.project  cabalw  compose.linux-gpu.yaml  compose.yaml  infernix.cabal  infernix.dhall.harness-backup  notes.txt
DEVELOPMENT_PLAN/: 00-overview.md  README.md  cohort-validation-waves.md  development_plan_standards.md  legacy-tracking-for-deletion.md  phase-0-documentation-and-governance.md  phase-1-repository-and-control-plane-foundation.md  phase-2-kind-cluster-storage-and-lifecycle.md  phase-3-ha-platform-services-and-edge-routing.md  phase-4-inference-service-and-durable-runtime.md  phase-5-web-ui-and-shared-types.md  phase-6-validation-e2e-and-ha-hardening.md  phase-7-demo-app-durable-context.md  phase-8-zero-tracked-dhall-config-and-eager-model-cache.md  phase-9-access-control-and-monitoring.md  system-components.md
app/: Demo.hs  Main.hs
bootstrap/: apple-silicon.sh  common.sh  linux-cpu.sh  linux-gpu.sh
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: configmap-cluster-config.yaml  configmap-demo-catalog.yaml  configmap-publication-state.yaml  deployment-coordinator.yaml  deployment-demo.yaml  deployment-edge.yaml  deployment-engine.yaml  deployment-service.yaml  deployment-web.yaml  edge-configmap.yaml  envoyproxy.yaml  gateway.yaml  gatewayclass.yaml  httproutes.yaml  persistentvolumeclaim-service-data.yaml  poddisruptionbudget-coordinator.yaml  poddisruptionbudget-demo.yaml  poddisruptionbudget-engine.yaml  postgresql-replication-init.yaml  runtimeclass-nvidia.yaml  secret-cluster-secrets.yaml  securitypolicy-operator-routes.yaml  service-api.yaml  service-demo.yaml  service-edge.yaml  service-web.yaml  workloads-platform-portals.yaml
dhall/: InfernixCluster.dhall  InfernixHost.dhall  InfernixSecrets.dhall  InfernixSubstrate.dhall
docker/: Dockerfile  diffusers-python.Dockerfile  engine.Dockerfile  infernix  infernix.Dockerfile  jax-python.Dockerfile  linux-base.Dockerfile  linux-cpu.Dockerfile  linux-cuda.Dockerfile  linux-substrate.Dockerfile  playwright.Dockerfile  pytorch-python.Dockerfile  service.Dockerfile  tensorflow-python.Dockerfile  transformers-python.Dockerfile  vllm-python.Dockerfile
documents/: README.md  documentation_standards.md
documents/architecture/: access_control_doctrine.md  bounded_inference_memory.md  configuration_doctrine.md  daemon_topology.md  demo_app_design.md  durable_context_design.md  engine_pool_routing.md  managed_state_transitions.md  model_catalog.md  object_access_doctrine.md  overview.md  pulsar_ml_workflow.md  realness_contract.md  runtime_modes.md  tenant_isolation_doctrine.md  web_ui_architecture.md
documents/development/: assistant_workflow.md  chaos_testing.md  demo_app_test_plan.md  frontend_contracts.md  haskell_style.md  local_dev.md  no_env_vars.md  purescript_policy.md  python_policy.md  testing_strategy.md
documents/engineering/: apple_silicon_metal_headless_builds.md  build_artifacts.md  cluster_config_manifest.md  dependency_management.md  docker_policy.md  edge_routing.md  host_tools_manifest.md  implementation_boundaries.md  k8s_native_dev_policy.md  k8s_storage.md  model_lifecycle.md  object_storage.md  portability.md  storage_and_state.md  testing.md
documents/operations/: apple_silicon_runbook.md  cluster_bootstrap_runbook.md
documents/reference/: api_surface.md  cli_reference.md  cli_surface.md  web_portal_surface.md
documents/research/: README.md
documents/tools/: harbor.md  keycloak.md  minio.md  postgresql.md  pulsar.md
kind/: README.md  cluster-apple-silicon.yaml  cluster-linux-cpu.yaml  cluster-linux-cuda.yaml  cluster-linux-gpu.yaml
proto/: README.md
python/: poetry.toml  pyproject.toml
python/adapters/: __init__.py  common.py  diffusers_python.py  jax_python.py  model_bootstrap.py  model_cache.py  pytorch_python.py  tensorflow_python.py  transformers_python.py  vllm_python.py
python/adapters/diffusers-python/: diffusers_python_adapter.py
python/adapters/fixture/: __init__.py  adapter.py
python/apple-silicon/: pyproject.toml
python/apple-silicon/adapters/: __init__.py
python/engines/diffusers/: poetry.toml  pyproject.toml
python/engines/jax/: poetry.toml  pyproject.toml
python/engines/pytorch/: poetry.toml  pyproject.toml
python/engines/tensorflow/: poetry.toml  pyproject.toml
python/engines/transformers/: poetry.toml  pyproject.toml
python/engines/vllm/: poetry.toml  pyproject.toml
python/linux-cpu/: pyproject.toml
python/linux-cpu/adapters/: __init__.py  common.py  vllm_python.py
python/linux-cuda/: pyproject.toml
python/linux-cuda/adapters/: __init__.py  jax_python.py  tensorflow_python.py  transformers_python.py
python/native-runners/: apple_native_runner.py  requirements-linux.txt
scripts/: install-formatter.sh
src/Infernix/: CLI.hs  Cluster.hs  ClusterConfig.hs  CommandRegistry.hs  Config.hs  DemoCLI.hs  DemoConfig.hs  DhallSchema.hs  Edge.hs  Error.hs  Gateway.hs  HostConfig.hs  HostPrereqs.hs  HostTools.hs  HttpProxy.hs  Models.hs  ProcessMonitor.hs  ProjectInit.hs  Python.hs  Routes.hs  Runtime.hs  SecretsConfig.hs  Service.hs  Storage.hs  Substrate.hs  Types.hs  Webapp.hs  Workflow.hs
test/haskell-style/: Spec.hs
test/integration/: Spec.hs
test/unit/: Spec.hs
tools/: demo_config.py  discover_chart_claims.py  discover_chart_images.py  docs_check.py  edge_proxy.py  engine_fixture.py  engine_probe.py  final_engine_runner.py  haskell_style_check.py  helm_chart_check.py  lint_check.py  list_harbor_overlay_images.py  platform_asset_check.py  portal_surface.py  proto_check.py  publish_chart_images.py  python_quality.sh  requirements.txt  runtime_backend.py  runtime_fixture_backend.py  runtime_worker.py  service_server.py
web/: Dockerfile  build.mjs  package-lock.json  package.json  playwright.config.js  spago.yaml
web/playwright/: inference.spec.js
web/scripts/: install-purescript.mjs
web/src/: Main.purs  app.js  catalog.js  (+2 more)
(+93 files in other folders)
