cabal-version:      3.8
name:               infernix
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         noreply@example.com
author:             Infernix
category:           Development
build-type:         Custom
extra-source-files:
    README.md
    proto/infernix/runtime/inference.proto
    proto/infernix/manifest/runtime_manifest.proto
    proto/infernix/api/inference_service.proto

custom-setup
    setup-depends:
        base,
        Cabal,
        directory,
        filepath,
        process,
        proto-lens-setup

library
    exposed-modules:
        Generated.Contracts
        Infernix.CLI
        Infernix.Cluster
        Infernix.Cluster.Discover
        Infernix.Cluster.PublishImages
        Infernix.Config
        Infernix.Demo.Api
        Infernix.DemoCLI
        Infernix.DemoConfig
        Infernix.Engines.AppleSilicon
        Infernix.Lint.Chart
        Infernix.Lint.Docs
        Infernix.Lint.Files
        Infernix.Lint.HaskellStyle
        Infernix.Lint.Proto
        Infernix.Models
        Infernix.Python
        Infernix.Runtime
        Infernix.Runtime.Cache
        Infernix.Runtime.Pulsar
        Infernix.Runtime.Worker
        Infernix.Service
        Infernix.Storage
        Infernix.Types

    hs-source-dirs:   src
    other-modules:
        Proto.Infernix.Api.InferenceService
        Proto.Infernix.Api.InferenceService_Fields
        Proto.Infernix.Manifest.RuntimeManifest
        Proto.Infernix.Manifest.RuntimeManifest_Fields
        Proto.Infernix.Runtime.Inference
        Proto.Infernix.Runtime.Inference_Fields

    autogen-modules:
        Proto.Infernix.Api.InferenceService
        Proto.Infernix.Api.InferenceService_Fields
        Proto.Infernix.Manifest.RuntimeManifest
        Proto.Infernix.Manifest.RuntimeManifest_Fields
        Proto.Infernix.Runtime.Inference
        Proto.Infernix.Runtime.Inference_Fields

    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        aeson >=2.1 && <2.3,
        base >=4.18 && <4.23,
        base64-bytestring >=1.2 && <1.3,
        bytestring >=0.11 && <0.13,
        case-insensitive >=1.2 && <1.3,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        http-client >=0.7 && <0.8,
        http-client-tls >=0.3 && <0.4,
        http-types >=0.12 && <0.13,
        lens-family >=1.2 && <2.2,
        network >=3.1 && <3.3,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        purescript-bridge >=0.15 && <0.16,
        scientific >=0.3 && <0.4,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        vector >=0.13 && <0.14,
        wai >=3.2 && <3.3,
        warp >=3.3 && <3.5,
        yaml >=0.11 && <0.12

executable infernix
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Werror -threaded
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

executable infernix-demo
    main-is:          Demo.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Werror -threaded
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-unit
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/unit
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-integration
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/integration
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-haskell-style
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/haskell-style
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix
