cabal-version:      3.8
name:               infernix
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         noreply@example.com
author:             Infernix
tested-with:        ghc ==9.14.1
category:           Development
build-type:         Custom
extra-source-files:
    README.md
    dhall/InfernixSubstrate.dhall
    proto/infernix/runtime/inference.proto
    proto/infernix/manifest/runtime_manifest.proto

custom-setup
    setup-depends:
        base,
        Cabal,
        directory,
        filepath,
        process,
        proto-lens-setup

library
    exposed-modules:
        Infernix.CLI
        Infernix.CommandRegistry
        Infernix.Cluster
        Infernix.Auth.Jwt
        Infernix.Bootstrap.Models
        Infernix.Bridge.Result
        Infernix.Cluster.Discover
        Infernix.Cluster.PublishImages
        Infernix.Config
        Infernix.Conversation.Event
        Infernix.Conversation.Hash
        Infernix.Conversation.Idempotency
        Infernix.Conversation.Reducer
        Infernix.Conversation.Topic
        Infernix.Dispatch.SingleFlight
        Infernix.Topic.Drafts
        Infernix.Topic.Metadata
        Infernix.Demo.Api
        Infernix.Demo.Auth
        Infernix.Demo.Bootstrap
        Infernix.Demo.WebSocket
        Infernix.DemoCLI
        Infernix.DemoConfig
        Infernix.Engines.AppleSilicon
        Infernix.Error
        Infernix.HostPrereqs
        Infernix.Internal.Util
        Infernix.Lint.Chart
        Infernix.Lint.Docs
        Infernix.Lint.Files
        Infernix.Lint.HaskellStyle
        Infernix.Lint.Proto
        Infernix.Models
        Infernix.Objects.Layout
        Infernix.Objects.Presigned
        Infernix.Python
        Infernix.Routes
        Infernix.Runtime
        Infernix.Runtime.Cache
        Infernix.Runtime.Pulsar
        Infernix.Runtime.Worker
        Infernix.Service
        Infernix.Storage
        Infernix.Substrate
        Infernix.Types
        Infernix.Web.Contracts
        Infernix.Workflow

    hs-source-dirs:   src
    other-modules:
        Infernix.ProcessMonitor
        Proto.Infernix.Manifest.RuntimeManifest
        Proto.Infernix.Manifest.RuntimeManifest_Fields
        Proto.Infernix.Runtime.Inference
        Proto.Infernix.Runtime.Inference_Fields

    autogen-modules:
        Proto.Infernix.Manifest.RuntimeManifest
        Proto.Infernix.Manifest.RuntimeManifest_Fields
        Proto.Infernix.Runtime.Inference
        Proto.Infernix.Runtime.Inference_Fields

    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        aeson >=2.1 && <2.3,
        base >=4.18 && <4.23,
        base16-bytestring >=1.0 && <1.1,
        base64-bytestring >=1.2 && <1.3,
        bytestring >=0.11 && <0.13,
        case-insensitive >=1.2 && <1.3,
        containers >=0.6 && <0.9,
        cryptohash-sha256 >=0.11 && <0.12,
        cryptonite >=0.30 && <0.31,
        memory >=0.18 && <0.19,
        directory >=1.3 && <1.4,
        dhall >=1.42 && <1.43,
        filepath >=1.4 && <1.6,
        http-client >=0.7 && <0.8,
        http-client-tls >=0.3 && <0.4,
        http-types >=0.12 && <0.13,
        lens-family >=1.2 && <2.2,
        network >=3.1 && <3.3,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        purescript-bridge >=0.15 && <0.16,
        scientific >=0.3 && <0.4,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        vector >=0.13 && <0.14,
        unix >=2.8 && <2.9,
        wai >=3.2 && <3.3,
        wai-websockets >=3.0 && <3.1,
        websockets >=0.13 && <0.14,
        warp >=3.3 && <3.5,
        yaml >=0.11 && <0.12

executable infernix
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Werror -threaded
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

executable infernix-demo
    main-is:          Demo.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall -Werror -threaded
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-unit
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/unit
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        aeson >=2.1 && <2.3,
        base >=4.18 && <4.23,
        base64-bytestring >=1.2 && <1.3,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        cryptonite >=0.30 && <0.31,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-integration
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/integration
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        aeson >=2.2 && <2.3,
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix

test-suite infernix-haskell-style
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test/haskell-style
    default-language: GHC2021
    ghc-options:      -Wall -Werror
    build-depends:
        base >=4.18 && <4.23,
        bytestring >=0.11 && <0.13,
        containers >=0.6 && <0.9,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.6,
        lens-family >=1.2 && <2.2,
        process >=1.6 && <1.7,
        proto-lens >=0.7 && <0.8,
        proto-lens-runtime >=0.7 && <0.8,
        text >=2.0 && <2.2,
        time >=1.12 && <1.16,
        infernix
