[tool.poetry]
name = "infernix-python-adapters"
version = "0.1.0"
description = "Python adapters for infernix engine bindings"
authors = ["Infernix <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^5.29.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.15.0"
ruff = "^0.11.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
files = ["adapters"]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
