[tool.poetry]
# Phase 4 Sprint 4.16 — isolated JAX engine venv (music-transcription: MT3, on
# linux-gpu). Optional `cuda` group keeps the default install framework-free.
# NOTE: the MT3 model itself rides an unmaintained JAX / T5X / gin-config stack
# that does not resolve on the supported Python 3.12 / CUDA 12.8 substrate; it
# is a named cohort residual (tracked in cohort-validation-waves.md). The base
# JAX CUDA stack is declared so the engine venv exists for when a maintained
# MT3 equivalent is adopted. See documents/development/python_policy.md
# "Per-Engine Framework Venvs".
name = "infernix-engine-jax"
version = "0.1.0"
description = "Isolated JAX (CUDA) engine venv for infernix"
authors = ["Infernix <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
infernix-adapters = { path = "../..", develop = true }

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
jax = { version = ">=0.4.34", extras = ["cuda12"] }

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
