[tool.poetry]
# Phase 4 Sprint 4.16 — isolated TensorFlow CUDA engine venv. Optional `cuda`
# group keeps the default install framework-free. NOTE: Basic Pitch TensorFlow
# currently pins TensorFlow <2.15.1 and Omnizart pins a TF1-era / Python<=3.8
# stack; both are incompatible with the supported Python 3.12 / CUDA 12.8 /
# protobuf-6 substrate and are named cohort residuals (tracked in
# cohort-validation-waves.md), not installed here. See
# documents/development/python_policy.md "Per-Engine Framework Venvs".
name = "infernix-engine-tensorflow"
version = "0.1.0"
description = "Isolated TensorFlow engine venv for infernix"
authors = ["Infernix <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
infernix-adapters = { path = "../..", develop = true }

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
tensorflow = { version = ">=2.16", extras = ["and-cuda"] }

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
